--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>A2website</title>
+  <title>Angular 2 Website</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
   <app-root>Loading...</app-root>
 </body>
+
 </html>
